se agrega readme y se limpia un poco el repo

--- a/experimentacion/sesion_1/analisisCuestionarioSesion1.ipynb
+++ b/experimentacion/sesion_1/analisisCuestionarioSesion1.ipynb
@@ -1011,6 +1011,299 @@
     "    plt.show()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Creo que podría usar el agente de chat frecuentemente</th>\n",
+       "      <td>2.653846</td>\n",
+       "      <td>1.231010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Encuentro el agente de chat innecesariamente complejo</th>\n",
+       "      <td>2.384615</td>\n",
+       "      <td>1.298520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Creo que el agente de chat fue fácil de utilizar</th>\n",
+       "      <td>3.961538</td>\n",
+       "      <td>1.076319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Creo que necesitaría ayuda de una persona con conocimientos técnicos para usar el agente de chat</th>\n",
+       "      <td>1.653846</td>\n",
+       "      <td>1.017539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Las funciones del agente de chat están bien integradas</th>\n",
+       "      <td>3.307692</td>\n",
+       "      <td>1.192283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Creo que el agente de chat es muy inconsistente</th>\n",
+       "      <td>2.769231</td>\n",
+       "      <td>1.394495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Imagino que la mayoría de la gente aprendería a usar el agente de chat en forma muy rápida</th>\n",
+       "      <td>4.076923</td>\n",
+       "      <td>1.128648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Encuentro que el agente de chat es muy difícil de usar</th>\n",
+       "      <td>1.692308</td>\n",
+       "      <td>1.010712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Me siento confiado al usar el agente de chat</th>\n",
+       "      <td>3.230769</td>\n",
+       "      <td>1.335895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Necesité aprender muchas cosas antes de ser capaz de usar el agente de chat</th>\n",
+       "      <td>1.384615</td>\n",
+       "      <td>0.897861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Los mensajes del agente de chat me motivaron a explicar mis ideas con mayor profundidad.</th>\n",
+       "      <td>3.076923</td>\n",
+       "      <td>1.412036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>El agente de chat me entregó indicaciones útiles para fortalecer mis argumentos.</th>\n",
+       "      <td>2.884615</td>\n",
+       "      <td>1.395046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>El agente de chat actuó como mediador para que los participantes pudieran apreciar distintos enfoques éticos o conceptuales.</th>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>1.174734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>El agente de chat intervino en los momentos adecuados, sin entorpecer la conversación.</th>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>1.421267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Los comentarios del agente de chat resultaron útiles para la discusión.</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.442221</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                        mean       std\n",
+       "Creo que podría usar el agente de chat frecuent...  2.653846  1.231010\n",
+       "Encuentro el agente de chat innecesariamente co...  2.384615  1.298520\n",
+       "Creo que el agente de chat fue fácil de utilizar    3.961538  1.076319\n",
+       "Creo que necesitaría ayuda de una persona con c...  1.653846  1.017539\n",
+       "Las funciones del agente de chat están bien int...  3.307692  1.192283\n",
+       "Creo que el agente de chat es muy inconsistente     2.769231  1.394495\n",
+       "Imagino que la mayoría de la gente aprendería a...  4.076923  1.128648\n",
+       "Encuentro que el agente de chat es muy difícil ...  1.692308  1.010712\n",
+       "Me siento confiado al usar el agente de chat        3.230769  1.335895\n",
+       "Necesité aprender muchas cosas antes de ser cap...  1.384615  0.897861\n",
+       "Los mensajes del agente de chat me motivaron a ...  3.076923  1.412036\n",
+       "El agente de chat me entregó indicaciones útile...  2.884615  1.395046\n",
+       "El agente de chat actuó como mediador para que ...  3.500000  1.174734\n",
+       "El agente de chat intervino en los momentos ade...  2.500000  1.421267\n",
+       "Los comentarios del agente de chat resultaron ú...  3.000000  1.442221"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Cargar CSV\n",
+    "df = pd.read_csv('Test de Usabilidad para Agente de Chat.csv') \n",
+    "\n",
+    "# Listado de columnas cuantitativas (excepto texto libre)\n",
+    "quant_cols = [\n",
+    "    \"Creo que podría usar el agente de chat frecuentemente\",\n",
+    "    \"Encuentro el agente de chat innecesariamente complejo\",\n",
+    "    \"Creo que el agente de chat fue fácil de utilizar\",\n",
+    "    \"Creo que necesitaría ayuda de una persona con conocimientos técnicos para usar el agente de chat\",\n",
+    "    \"Las funciones del agente de chat están bien integradas\",\n",
+    "    \"Creo que el agente de chat es muy inconsistente\",\n",
+    "    \"Imagino que la mayoría de la gente aprendería a usar el agente de chat en forma muy rápida\",\n",
+    "    \"Encuentro que el agente de chat es muy difícil de usar\",\n",
+    "    \"Me siento confiado al usar el agente de chat\",\n",
+    "    \"Necesité aprender muchas cosas antes de ser capaz de usar el agente de chat\",\n",
+    "    \"Los mensajes del agente de chat me motivaron a explicar mis ideas con mayor profundidad.\",\n",
+    "    \"El agente de chat me entregó indicaciones útiles para fortalecer mis argumentos.\",\n",
+    "    \"El agente de chat actuó como mediador para que los participantes pudieran apreciar distintos enfoques éticos o conceptuales.\",\n",
+    "    \"El agente de chat intervino en los momentos adecuados, sin entorpecer la conversación.\",\n",
+    "    \"Los comentarios del agente de chat resultaron útiles para la discusión.\"\n",
+    "]\n",
+    "\n",
+    "# Calcular medias y desviaciones estándar\n",
+    "stats = df[quant_cols].agg([\"mean\", \"std\"]).T\n",
+    "stats\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    26.000000\n",
+       "mean     68.365385\n",
+       "std      17.563347\n",
+       "min      22.500000\n",
+       "25%      56.250000\n",
+       "50%      70.000000\n",
+       "75%      82.500000\n",
+       "max      97.500000\n",
+       "Name: SUS, dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ítems SUS en orden\n",
+    "sus_items = [\n",
+    "    \"Creo que podría usar el agente de chat frecuentemente\", # positivo\n",
+    "    \"Encuentro el agente de chat innecesariamente complejo\", # negativo\n",
+    "    \"Creo que el agente de chat fue fácil de utilizar\", # positivo\n",
+    "    \"Creo que necesitaría ayuda de una persona con conocimientos técnicos para usar el agente de chat\", # negativo\n",
+    "    \"Las funciones del agente de chat están bien integradas\", # positivo\n",
+    "    \"Creo que el agente de chat es muy inconsistente\", # negativo\n",
+    "    \"Imagino que la mayoría de la gente aprendería a usar el agente de chat en forma muy rápida\", # positivo\n",
+    "    \"Encuentro que el agente de chat es muy difícil de usar\", # negativo\n",
+    "    \"Me siento confiado al usar el agente de chat\", # positivo\n",
+    "    \"Necesité aprender muchas cosas antes de ser capaz de usar el agente de chat\" # negativo\n",
+    "]\n",
+    "\n",
+    "sus_df = df[sus_items].copy()\n",
+    "\n",
+    "# Identificar qué ítems son positivos (pos) y negativos (neg)\n",
+    "pos = [0, 2, 4, 6, 8]  # índices\n",
+    "neg = [1, 3, 5, 7, 9]\n",
+    "\n",
+    "# Convertir a puntaje SUS\n",
+    "for i in pos:\n",
+    "    sus_df.iloc[:, i] = sus_df.iloc[:, i] - 1\n",
+    "\n",
+    "for i in neg:\n",
+    "    sus_df.iloc[:, i] = 5 - sus_df.iloc[:, i]\n",
+    "\n",
+    "# Puntaje total\n",
+    "df[\"SUS\"] = sus_df.sum(axis=1) * 2.5\n",
+    "\n",
+    "df[\"SUS\"].describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Respuestas: Beneficios ===\n",
+      "- puede seguir la conversación \n",
+      "- identifico bien los que partes de los argumentos estaban incompletos (necesidad de ejemplos o señalar los limites de ayudarlo o no)\n",
+      "- que es consiso a la hora de seguir el debate\n",
+      "- cuando no sabia que mas escribir de la situacion, me hacia preguntas y continuaba la conversacion\n",
+      "- Tener una vision objetiva de los hechos\n",
+      "- que motiva la participación al comienzo del debate\n",
+      "- El rol de mediador y orientador fomentan la discusion y sacan de los participantes más opiniones\n",
+      "- Ayudo a guiar la conversacion, especialmente al principio.\n",
+      "- Ayuda a avanzar en la conversación. Con un tema complicado como ética hay que pensar bien las cosas que decir o que aportar. La IA ayuda a centrar a las personas a expresarse.\n",
+      "- Que nos haga opinar con respecto a otros amigos.\n",
+      "- Me indica claramente donde mejorar\n",
+      "- Algunos de las intervenciones que realiza son un poco útiles para expandir ideas\n",
+      "- no lo encontre muy beneficioso \n",
+      "- Poder discutir con el resto\n",
+      "- Tener un lugar donde compartir ideas de manera rapida\n",
+      "- a decir verdad la dinamica de interactuar en un chat no la considero muy eficas en comparacion al tutor\n",
+      "- Sirvió para guiar la conversación \n",
+      "- Me hace pensar un poco mas lo que escribí\n",
+      "- Permite encaminar la conversación hacia tópicos que no han sido mencionados con anterioridad al principio.\n",
+      "- La verdad siento que solo entorpeció la conversación, no aportó nada y solo pedía que todos hablemos, era como que no leía lo que escribíamos \n",
+      "\n",
+      "=== Respuestas: Mejoras ===\n",
+      "- Tiempo de respuesta\n",
+      "- La velocidad para ser capaz de intervenir mas precisamente\n",
+      "- podria ser mas flexible con los tiempos, ya que siento que se sintio muy acatado respecto de cuanto falta para el debate\n",
+      "- la velocidad a la que responde, cuando se llamaba al agente respondia rapido, pero si el agente tenia que hacer las preguntas se demoraba mucho en hacerlas\n",
+      "- mensajes más concurrentes y más asertivos \n",
+      "- Debería hablar en momentos más adecuado. Muchas veces hablaba como si le llegaran tarde los mensajes de los integrantes. \n",
+      "- Algunas veces el tiempo que esperaba para que escribamos fue muy corto, no alcanzaba a terminar de escribir algo y mandaba otra instruccion.\n",
+      "- La velocidad. Siento que a veces la IA responde más tarde chats que ya fueron enviados antes.\n",
+      "- podria indicar como pudo empeorar tambien mi argumento\n",
+      "- La verdad el 80% de las intevenciones cortan y entorpecen la comunicación, pues incluso se pega cambios de temas nada que ver y es simplemente poco útil\n",
+      "- era muy repetitivo en sus respuestas y no entendia  que estabamos de acuerdo  \n",
+      "- La recepcion de los mensajes, derrepente y dimos nuestro resumen y el agente seguia pidiendo el resumen de cada uno\n",
+      "- No funcionaba muy bien, sus aportes en base a la conversación eran muy nulos. No interpretaba muy bien los discutido\n",
+      "- No encontré que sea de ayuda el agente, ya que interrumpía y no favorecía a la conversacion\n",
+      "- que motivaba a la gente poco activa a interactuar\n",
+      "- El agente podria haber sido bueno, pero nos funciono muy mal, nos invitaba a hablar cuando ya estábamos conversando, no tomo nuestros mensajes en consideración, entonces no nos corrigió/complemento/apoyo en la discusión\n",
+      "- El chat fue muy inconsistente. Se me quedó pegado y tuve que actualizar para poder leer los mensajes nuevos. La parte de agente del lado derecho nunca dijo palabras. El chat no me gustó. \n",
+      "- La sincronización con la conversación de los participantes\n",
+      "- Las respuestas del agente son tardías o no fluyen con la conversación y entorpecen la conversación. con mas personas puede ser mas complejo ya que éramos solo 4 en el chat\n",
+      "- El agente no interpreta correctamente los argumentos realizados por los usuarios. A pesar de que se decía cuales eran las formas de ayudar a Sebastián, el agente de chat seguía diciendo que mencionáramos cuales eran las formas en las que podíamos ayudarlo.\n",
+      "- La frecuencia con la que entrega mensajes, raramente lo vi y no aportaba cosas muy utiles. Algunas preguntas fueron buenas, pero eran cada 5-8 minutos.\n",
+      "- La lectura de mensajes y del contexto, no fue aporte a la conversación \n"
+     ]
+    }
+   ],
+   "source": [
+    "q_beneficios = df[\"¿Qué es para ti lo más beneficioso de usar el agente de chat?\"].dropna()\n",
+    "q_mejoras = df[\"¿Qué aspectos del agente de chat consideras que tienen que ser mejorados?\"].dropna()\n",
+    "\n",
+    "print(\"=== Respuestas: Beneficios ===\")\n",
+    "for r in q_beneficios:\n",
+    "    print(\"-\", r)\n",
+    "\n",
+    "print(\"\\n=== Respuestas: Mejoras ===\")\n",
+    "for r in q_mejoras:\n",
+    "    print(\"-\", r)\n"
+   ]
   }
  ],
  "metadata": {
